--- a/CSS_advanced/styles/2-style.css
+++ b/CSS_advanced/styles/2-style.css
@@ -3,23 +3,27 @@ html {
     scroll-behavior: smooth;
 }
 
-
+/*For the body, set the foreground color value*/
 body {
     color: #161616;
 }
 
+/*all anchor elements, set the foreground color*/
 a {
     color: #161616;
 }
 
+/*All elements with the class visually-hidden should have their display to none*/
 visually-hidden {
     display: none;
 }
 
+/*All elements with the class card-category, should have their foreground color set*/
 .card-category {
     color: #D73953;
 }
 
+/*All elements with the class section-tagline should have their foreground color set*/
 .section-tagline {
     color: #D73953;
 }
