--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -34,7 +34,7 @@ visually-hidden {
     color: var(--color-primary);
 }
 
-.section-tagline {
+.section-header {
     text-align: var(--section-header-align);
 }
 
