--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -76,6 +76,7 @@ visually-hidden {
 .container {
     width: 960px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 /* -- used to define custom properties*/
