--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -75,8 +75,8 @@ visually-hidden {
 
 .container {
     width: 960px;
-    margin: 0 auto;
-    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* -- used to define custom properties*/
