--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -12,7 +12,7 @@ html {
 }
 
 /*For the body, set the foreground color value*/
-.body {
+body {
     color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
