--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -127,21 +127,18 @@ visually-hidden {
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 00 3rem 0;
+    --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
 }
 
-.footer{
-    padding: var(--footer-padding);
-}
 
 .navbar-menu {
     float: right;
 }
 
 .nav{
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     text-align: center;
 }
@@ -160,6 +157,10 @@ visually-hidden {
     padding: 0.5rem 1rem;
 }
 
-.nav nav-link:hover {
+.nav .nav-link:hover {
     color: var(--nav-item-link-hover);
+}
+
+.footer{
+    padding: var(--footer-padding);
 }
