Customizing the navbar

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -143,7 +143,7 @@ visually-hidden {
     text-align: center;
 }
 
-.nav nav-item {
+.nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -152,7 +152,7 @@ visually-hidden {
     margin: var(--nav-item-margin);
 }
 
-.nav nav-link {
+.nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
 }
