--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -164,7 +164,7 @@ visually-hidden {
     color: var(--nav-item-link-hover);
 }
 
-.ul.row{
+ul.row{
     margin: 0;
     padding: 0;
     list-style-type: none;   
@@ -194,4 +194,3 @@ visually-hidden {
 .footer ul{
     text-align: right;
 }
-
