--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -95,11 +95,11 @@ visually-hidden {
 /* var() allows you to reference the value of a custom property and use it in place of a standard value*/
 :root {
     --color-primary: #d73953;
-    --background: #090909;
+    --color-black: #090909;
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: var(--color-white);
+    --text-color: var(--color-black);
     --font-family-base: Open Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
     --font-family-title: Raleway, Helvetica Neue, Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
@@ -115,7 +115,7 @@ visually-hidden {
     --section-header-align: center;
     --section-tagline-transform: uppercase;
     --section-title-margin: 0;
-    --section-title-color: var(--color-white);
+    --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
@@ -197,6 +197,12 @@ ul.row{
 
 .footer{
     padding: var(--footer-padding);
+}
+
+[data-section-theme="dark"] {
+    --text-color: var(--color-white);
+    --section-title-color : var(--color-white);
+    background: var(--color-black);
 }
 
 .footer ul{
