Add background and hover state to services

--- a/CSS_advanced/styles/24-style.css
+++ b/CSS_advanced/styles/24-style.css
@@ -223,7 +223,7 @@ ul.row{
 
 .card-services a {
     display: block;
-    padding: calc(2 * var(--root-element));
+    padding: 2rem;
     background-color: var(--color-light-grey);
 }
 
