Add border to the button

--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -141,7 +141,7 @@ visually-hidden {
     --button-font-size: var(--font-size-large);
     --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: var(var(--color-primary));
+    --button-hover-background: var(--color-primary);
 }
 
 
