Add border to the button

--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -244,7 +244,7 @@ ul.row{
     text-decoration: none;
 }
 
-button {
+.button {
     
     display: var(--button-display);
     padding: var(--button-padding);
@@ -254,7 +254,7 @@ button {
     text-decoration: var(--button-text-decoration);
 }
 
-button a:hover{
+.button a:hover{
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
