--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -267,13 +267,13 @@ ul.row{
 
 .card-testimonial .card-avatar{
     border-radius: 50%;
-    width: calc(10 * var(--root-element));
-    height: calc(10 * var(--root-element));
+    width: 10rem;
+    height: 10rem;
 }
 
 .card-testimonial .card-quote cite{
     display: block;
-    padding-top: var(--root-element);
+    padding-top: 1rem;
     color: var(--color-primary);
 }
 
