fixing the header and menu navigation bar

--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -309,8 +309,8 @@ ul.row{
 .header-logo a{
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
-    position: var(--header-logo-link-top);
-    position: var(--header-logo-link-left);
+    top: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
 }
 
 .footer ul{
