--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -320,10 +320,10 @@ ul.row{
         left: 0;
         background-color: var(--color-white);
         width: 0;
-        height: 20vh;
+        height: 0.2rem;
 }
 
-.nav .nav-item:hover nav{
+.nav .nav-item:hover .nav-link::before{
     background-color: var(--color-primary);
     width: 100%;
 }
