--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -328,7 +328,7 @@ ul.row{
     width: 100%;
 }
 
-.card-work card-outer{
+.card-work .card-outer{
     position: relative;
     overflow: hidden;
 }
