--- a/sass_scss/8-mixin_margins.scss
+++ b/sass_scss/8-mixin_margins.scss
@@ -1,17 +1,19 @@
 /*Margin mixin*/
 
-$left: 10px;
-$right: 10px;
+@mixin margin {
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
-$leftdiv: 15px;
-$rightdiv: 15px;
+@mixin div{
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
 body {
-    margin-left: $left;
-    margin-right: $right;
+    @include margin;
 }
 
 div {
-    margin-left: $leftdiv;
-    margin-right: $rightdiv;
+    @include div;
 }
