--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -212,9 +212,9 @@
   }
 
   .nav-item + .nav-item {
-      margin: var(--nav-item-margin);
+      margin: var(0 0 0 2rem);
   }
-  
+
   .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
