--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -72,7 +72,7 @@
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: .04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 2rem 0 0;
+    --nav-item-margin: 0 0 0 2rem;
     --nav-item-link-hover: var(--color-white);
   
     /** BUTTON **/
@@ -212,9 +212,9 @@
   }
 
   .nav .nav-item + .nav-item {
-      margin: var(0 0 0 2rem);
+      margin: var(--nav-item-margin);
   }
-
+  
   .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
