The meta list inside the aside section

--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -598,7 +598,7 @@
     }
 
     .post-meta-list [class^="post-meta-"] :last-child {
-        border: none;
+        border: 0;
         margin-bottom: 3rem;
     }
 
