--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -597,8 +597,8 @@
         border-bottom: 0.2rem solid var(--color-light-grey);
     }
 
-    .post-meta-list [class^="post-meta-"] :last-child {
-        border: 0;
+    .post-meta-list [class^="post-meta-"]:last-child {
+        border: none;
         margin-bottom: 3rem;
     }
 
