--- a/form/01-styles.css
+++ b/form/01-styles.css
@@ -664,10 +664,9 @@
   /* Basic form
     ============================= */
 
-    .form {
+    form {
         display: flex;
         flex-direction: column;
         padding: 1rem 0;
         margin: 0;
     }
-    
