--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -722,7 +722,7 @@
     background-color: var(--color-white);
 }
 
-    .form-group .focus-within {
+    .form-group:focus-within {
         background-color: var(--color-light-grey);
         transition: .3s;
     }
