add the search form

--- a/form/07-styles.css
+++ b/form/07-styles.css
@@ -838,7 +838,7 @@ input:not(:placeholder-shown) ~ .form-field-icon::after {
     height: 1.5rem;
   }
 
-  .form-search .input {
+  .form-search input[type="search"] {
     display: inline-block;
     color: var(--color-white);
     padding-right: 2rem;
@@ -863,5 +863,5 @@ input:not(:placeholder-shown) ~ .form-field-icon::after {
     cursor: text;
     margin: 0 1rem;
   }
-  
+
   
