create a Hamburger icon

--- a/responsive_design/05-styles.css
+++ b/responsive_design/05-styles.css
@@ -78,6 +78,7 @@
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 0 2rem;
     --nav-item-link-hover: var(--color-white);
+
     /** BUTTON **/
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
@@ -263,19 +264,21 @@
 
 
   @media screen and (max-width: 767px){
+    .navbar-menu {
+        display: none;
+        flex: 1;
+    }
+
     :root {
         --nav-item-margin: 0;
     }
 
-    .navbar-menu {
-        flex: 1;
-    }
 
     .header .nav {
         flex-direction: column;
         overflow: hidden;
         max-height: 0;
-        transition: max-height .2s ease-out;
+        transition: max-height 0.2s ease-out;
     }
   }
 
@@ -290,10 +293,10 @@
     background: var(--color-white);
     display: block;
     width: 2rem;
-    height: .2rem;
+    height: 0.2rem;
     position: relative;
-    transition: background .2s ease-out;
-  } 
+    transition: background 0.2s ease-out;
+  }
 
   .header .menu-icon .navicon::before, .header .menu-icon .navicon::after {
     content: "";
@@ -302,15 +305,15 @@
     height: 100%;
     position: absolute;
     background: var(--color-white);
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
   }
   
   .header .menu-icon .navicon::before {
-    top: .7rem;
+    top: 0.7rem;
   }
 
   .header .menu-icon .navicon::after {
-    top: -.7rem;
+    top: -0.7rem;
   }
 
   /* Header
