--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -188,6 +188,29 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+  .off-screen {
+    left: 100vw;
+    position: relative;
+  }
+
+  .skip-link {
+    background: var(--color-black);
+    color: var(--color-white);
+    left: 0;
+    padding: 0.7rem;
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    z-index: 10;
+    transform: translateY(-1rem);
+    transition: transform .2s ease-in-out, opacity .2s ease-in-out;
+  }
+
+  .skip-link .focus {
+    opacity: 0;
+    transform: translateY(0);
+  }
   
   /*** 2. LAYOUT ***/
   
