--- a/Bootstrap/6-styles.css
+++ b/Bootstrap/6-styles.css
@@ -1,6 +1,7 @@
 :root {
     --light-red: #e0003c;
     --dark-red: #8B0000;
+    --white: #FFFFFF;
 } 
 .border-bottom {
     border-color: var(--light-red) !important;
@@ -13,15 +14,15 @@
 }
 
 h4 {
-    color: white;
+    color: var(--white);
 }
 
 .btn {
-    color: white;
+    color: var(--white);
 }
 
 .btn-outline-primary {
-    background-color: white;
+    background-color: var(--white);
     color: var(--dark-red);
     border: 2px solid var(--dark-red);
 }
